--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ Django==3.0.5
 django-allauth==0.41.0
 django-countries==6.1.2
 django-crispy-forms==1.9.0
+django-localflavor==3.0.1
 idna==2.9
 oauthlib==3.1.0
+Pillow==7.1.2
+python-stdnum==1.13
 python3-openid==3.1.0
 pytz==2019.3
 requests==2.23.0
