--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,12 @@ django-allauth==0.41.0
 django-countries==6.1.2
 django-crispy-forms==1.9.0
 django-localflavor==3.0.1
+gunicorn==20.0.4
 idna==2.9
 oauthlib==3.1.0
 Pillow==7.1.2
+psycopg2==2.8.5
+python-decouple==3.3
 python-stdnum==1.13
 python3-openid==3.1.0
 pytz==2019.3
@@ -18,3 +21,4 @@ requests-oauthlib==1.3.0
 sqlparse==0.3.1
 stripe==2.48.0
 urllib3==1.25.9
+whitenoise==5.1.0
